tests/types/errors/if_cond_not_bool.mochi
let x = 1
if x {
  print("yes")
}
